--- a/styles/style.css
+++ b/styles/style.css
@@ -13,13 +13,215 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  border: 1px solid red;
+  position: relative;
+  display: flex;
+  background-color: #f2f2f2;
   /* выше установили ограничения для секции */
+}
+
+.logo_place_header{
+  width: 228px;
+  height: 32px;
+  position: absolute;
+  margin-top:30px;
+  margin-left:64px;
+}
+
+.header__title{
+line-height: 96px;
+font-size: 102px;
+font-weight:600;
+width: 730px;
+margin: auto 64px;
+}
+
+.header__subtitle{
+  position: absolute;
+  width: 388px;
+  bottom:30px;
+  left: 64px;
+}
+
+.header__main-illustration{
+  height:608px;
+  width:765px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
+  position: absolute;
+  right:0;
+  top:64px;
+  background-color:#2f80ed ;
   height: 568px;
   width: 568px;
+}
+
+.description{
+  border:1px solid red;
+  margin-top: 100px;
+}
+
+.two-columns{
+display: flex;
+width: 80%;
+min-width: 784px;
+border: 2px solid green;
+margin: 0 auto;
+justify-content: space-between;
+}
+
+.two-columns__brief{
+  line-height: 1.2;
+  font-size: 18px;
+  font-style: normal;
+  color: #2f80ed;
+  width: 175px;
+  margin-top: 0;
+  border: 2px solid black;
+}
+
+.two-columns__main-text{
+  flex-direction: column;
+  width: 80%;
+  border: 2px solid mediumorchid;
+  height: auto;
+}
+
+.two-columns__paragraph{
+  line-height: 34px;
+  font-size: 24px;
+  font-style: normal;
+  margin-bottom: 30px;
+}
+
+
+
+.digits{
+}
+
+.section-title{
+width: 60%;
+margin: 0 auto;
+border: 1px solid red;
+text-align: center;
+margin-top:100px; 
+line-height: 1.15;
+font-size: 60px;
+font-style: 600;
+}
+
+.section-subtitle{
+  width: 60%;
+  border: 1px solid black;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 20px;
+  line-height: 34px;
+  font-size: 24px;
+  font-style: normal;
+
+}
+
+.table{
+  display: flex;
+  flex-wrap: wrap;
+  border: 2px solid green;
+  width: 1100px;
+  margin: 0 auto;
+  margin-top: 60px;
+  justify-content: space-between;
+}
+
+.table__cell{
+  width: 250px;
+  border: 1px solid rebeccapurple;
+  margin-top: 60px;
+}
+.table__heading{
+  line-height: 1.15;
+  font-size: 24px;
+  font-style: 600;
+}
+
+.table__text{
+  line-height: 1.2;
+  font-size: 18px;
+  font-style: normal;
+}
+
+.feynman{
+  border: 2px solid red;
+  background-color: #f2f2f2;
+  margin-top: 100px;
+  height: 890px;
+  background-image:url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-size: 867px 637px;
+  background-position: left bottom;
+  position: relative;
+}
+
+.feynman__title{
+  width: 648px;
+  text-align: center;
+  margin: 0 auto;
+  line-height: 1.15;
+  font-size: 120px;
+  font-style: 600;
+  margin-top: 100px;
+}
+
+.feynman__subtitle{
+  text-align: center;
+  min-width: 348px;
+  margin: 0 auto;
+  margin-top:70px;
+  line-height: 51px;
+  font-size: 36px;
+  font-style: normal;
+}
+
+.feynman__link{
+  position: absolute;
+  right: 48px;
+  top: 50%;
+  line-height: 51px;
+  font-size: 36px;
+  font-style: normal;
+}
+
+
+.kaufman{
+background-color: #1f1f1f ;
+border: 2px solid blue ;
+}
+
+/*.kaufman__triangle{
+  position: absolute;
+  width: 877px;
+  height: 877px;
+  right: -210px;
+}
+Не понимаю, как треугольник разместить в картинке.*/
+
+.section-title__theme_dark{
+  color: white;
+  line-height: 1.15;
+  font-size: 60px;
+  font-style: 600;
+}
+
+.section-subtitle__theme_dark{
+  color: white;
+  line-height: 34px;
+  font-size: 24px;
+  font-style: normal;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -28,4 +230,77 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  margin-bottom: 100px;
+}
+
+
+.footer{
+  min-height: 350px;
+  border: 1px solid red;
+  justify-content: center;
+  background-color: #1f1f1f ;
+}
+
+.footer__columns{
+  width:90%;
+  border: 1px solid green;
+  margin: 0 auto;
+  margin-top: 60px;
+  margin-bottom: 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__column_content_copyright{
+  flex-basis: 711px;
+  height: 100%;
+  border: 1px solid white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  
+}
+
+.logo_place_footer{
+width: 228px;
+height: 32px;
+}
+
+.footer__author{
+  color: white;
+}
+
+.footer__column_content_info{
+  display: flex;
+  border: 1px solid white;
+  flex-direction: column;
+  color: white;
+}
+
+.footer__column-heading{
+  margin-top:0;
+  margin-bottom: 20px;
+  border: 1px solid pink;
+}
+
+.footer__columns-links {
+  border: 1px solid yellow;
+  margin-top: 0;
+}
+
+.footer__content_social{
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+
+.footer__column-heading{
+  color: white;
+  margin-bottom: 20px ;
+}
+
+.footer__social-icon{
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
