--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,16 @@
+ul, li, p, h1, h2, h3{
+margin: 0;
+padding: 0;
+}
+
+h2{
+  margin: 0;
+}
+
+li{
+  list-style-type: none;
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -13,7 +26,6 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  border: 1px solid red;
   position: relative;
   display: flex;
   background-color: #f2f2f2;
@@ -24,8 +36,8 @@
   width: 228px;
   height: 32px;
   position: absolute;
-  margin-top:30px;
-  margin-left:64px;
+  left: 64px;
+  top: 30px;
 }
 
 .header__title{
@@ -33,7 +45,15 @@ line-height: 96px;
 font-size: 102px;
 font-weight:600;
 width: 730px;
-margin: auto 64px;
+margin-left: 64px;
+align-self: center;
+z-index: 2;
+}
+
+.header__link{
+  text-decoration: none;
+  color: #2f80ed  ;
+  z-index: 2;
 }
 
 .header__subtitle{
@@ -41,6 +61,7 @@ margin: auto 64px;
   width: 388px;
   bottom:30px;
   left: 64px;
+  z-index: 2;
 }
 
 .header__main-illustration{
@@ -52,7 +73,6 @@ margin: auto 64px;
   z-index: 1;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   position: absolute;
   right:0;
@@ -63,7 +83,6 @@ margin: auto 64px;
 }
 
 .description{
-  border:1px solid red;
   margin-top: 100px;
 }
 
@@ -71,7 +90,6 @@ margin: auto 64px;
 display: flex;
 width: 80%;
 min-width: 784px;
-border: 2px solid green;
 margin: 0 auto;
 justify-content: space-between;
 }
@@ -79,25 +97,34 @@ justify-content: space-between;
 .two-columns__brief{
   line-height: 1.2;
   font-size: 18px;
-  font-style: normal;
+  font-weight: normal;
   color: #2f80ed;
   width: 175px;
   margin-top: 0;
-  border: 2px solid black;
 }
 
 .two-columns__main-text{
   flex-direction: column;
   width: 80%;
-  border: 2px solid mediumorchid;
   height: auto;
 }
 
 .two-columns__paragraph{
   line-height: 34px;
   font-size: 24px;
-  font-style: normal;
-  margin-bottom: 30px;
+  font-weight: normal;
+  padding-bottom: 30px;
+}
+
+.two-columns__paragraph:last-child{
+  padding-bottom: 0;
+}
+
+
+.two-columns__span-accent{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight:600;
 }
 
 
@@ -108,7 +135,6 @@ justify-content: space-between;
 .section-title{
 width: 60%;
 margin: 0 auto;
-border: 1px solid red;
 text-align: center;
 margin-top:100px;
 line-height: 1.15;
@@ -118,7 +144,6 @@ font-style: 600;
 
 .section-subtitle{
   width: 60%;
-  border: 1px solid black;
   margin: 0 auto;
   text-align: center;
   margin-top: 20px;
@@ -131,7 +156,6 @@ font-style: 600;
 .table{
   display: flex;
   flex-wrap: wrap;
-  border: 2px solid green;
   width: 1100px;
   margin: 0 auto;
   margin-top: 60px;
@@ -140,23 +164,26 @@ font-style: 600;
 
 .table__cell{
   width: 250px;
-  border: 1px solid rebeccapurple;
   margin-top: 60px;
+  display: flex;
+  flex-direction: column;
 }
 .table__heading{
   line-height: 1.15;
   font-size: 24px;
   font-style: 600;
+  margin-bottom: 20px;
 }
 
 .table__text{
   line-height: 1.2;
   font-size: 18px;
   font-style: normal;
+  margin-top: 20px;
+  
 }
 
 .feynman{
-  border: 2px solid red;
   background-color: #f2f2f2;
   margin-top: 100px;
   height: 890px;
@@ -194,37 +221,44 @@ font-style: 600;
   line-height: 51px;
   font-size: 36px;
   font-style: normal;
+  color: #2f80ed;
+  text-decoration: none;
 }
 
 
 .kaufman{
-background-color: #1f1f1f;
-border: 2px solid blue;
+  position: relative;
+  background-color: #1f1f1f;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 90px;
+  z-index: -1;
+  overflow: hidden;
 }
 
-/*.kaufman__triangle{
-  position: absolute;
-  width: 877px;
-  height: 877px;
-  right: -210px;
+.kaufman__triangle{
+position: absolute;
+z-index: -1;
+right: -210px;
+top: 0;
 }
-Не понимаю, как треугольник разместить в картинке.*/
 
-.section-title__theme_dark{
+.section-title_theme_dark{
   color: white;
   line-height: 1.15;
   font-size: 60px;
   font-style: 600;
+  margin: 0;
 }
 
-.section-subtitle__theme_dark{
+.section-subtitle_theme_dark{
   color: white;
   line-height: 34px;
   font-size: 24px;
   font-style: normal;
 }
 
-/* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
   color: white;
@@ -236,29 +270,27 @@ border: 2px solid blue;
 
 .footer{
   min-height: 350px;
-  border: 1px solid red;
   justify-content: center;
   background-color: #1f1f1f;
+  position: relative;
+  display: flex;
 }
 
 .footer__columns{
   width:90%;
-  border: 1px solid green;
   margin: 0 auto;
-  margin-top: 60px;
-  margin-bottom: 40px;
   display: flex;
   justify-content: space-between;
+  position: absolute;
+  top: 60px;
+  bottom: 40px;
 }
 
 .footer__column_content_copyright{
   flex-basis: 711px;
-  height: 100%;
-  border: 1px solid white;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  
 }
 
 .logo_place_footer{
@@ -268,11 +300,13 @@ height: 32px;
 
 .footer__author{
   color: white;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
 }
 
 .footer__column_content_info{
   display: flex;
-  border: 1px solid white;
   flex-direction: column;
   color: white;
 }
@@ -280,21 +314,28 @@ height: 32px;
 .footer__column-heading{
   margin-top:0;
   margin-bottom: 20px;
-  border: 1px solid pink;
   color: white;
 }
 
-.footer__columns-links {
-  border: 1px solid yellow;
+.footer__column-links {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
 }
 
-.footer__content_social{
+.footer__column-link{
+  text-decoration: none;
+  color: white;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__column_content_social{
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
+  
 }
 
 .footer__social-icon{
