--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,3 @@
-ul, li, p, h1, h2, h3{
-margin: 0;
-padding: 0;
-}
-
-h2{
-  margin: 0;
-}
-
-li{
-  list-style-type: none;
-}
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -41,6 +28,8 @@ li{
 }
 
 .header__title{
+  margin: 0;
+padding: 0;
 line-height: 96px;
 font-size: 102px;
 font-weight:600;
@@ -57,11 +46,16 @@ z-index: 2;
 }
 
 .header__subtitle{
+  margin: 0;
+padding: 0;
   position: absolute;
   width: 388px;
   bottom:30px;
   left: 64px;
   z-index: 2;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight:normal;
 }
 
 .header__main-illustration{
@@ -89,12 +83,13 @@ z-index: 2;
 .two-columns{
 display: flex;
 width: 80%;
-min-width: 784px;
 margin: 0 auto;
 justify-content: space-between;
 }
 
 .two-columns__brief{
+  margin: 0;
+padding: 0;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
@@ -105,11 +100,14 @@ justify-content: space-between;
 
 .two-columns__main-text{
   flex-direction: column;
-  width: 80%;
+  min-width: 80%;
   height: auto;
+  min-width: 784px;
 }
 
 .two-columns__paragraph{
+  margin: 0;
+  padding: 0;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -133,6 +131,8 @@ justify-content: space-between;
 }
 
 .section-title{
+  margin: 0;
+  padding: 0;
 width: 60%;
 margin: 0 auto;
 text-align: center;
@@ -143,6 +143,8 @@ font-style: 600;
 }
 
 .section-subtitle{
+  margin: 0;
+  padding: 0;
   width: 60%;
   margin: 0 auto;
   text-align: center;
@@ -154,28 +156,35 @@ font-style: 600;
 }
 
 .table{
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-wrap: wrap;
   width: 1100px;
   margin: 0 auto;
-  margin-top: 60px;
   justify-content: space-between;
 }
 
 .table__cell{
+  margin: 0;
+  padding: 0;
   width: 250px;
   margin-top: 60px;
   display: flex;
   flex-direction: column;
+  list-style-type: none;
 }
 .table__heading{
+  margin: 0;
+  padding: 0;
   line-height: 1.15;
   font-size: 24px;
   font-style: 600;
-  margin-bottom: 20px;
 }
 
 .table__text{
+  margin: 0;
+padding: 0;
   line-height: 1.2;
   font-size: 18px;
   font-style: normal;
@@ -186,7 +195,7 @@ font-style: 600;
 .feynman{
   background-color: #f2f2f2;
   margin-top: 100px;
-  height: 890px;
+  min-height: 890px;
   background-image:url(../images/feynman.png);
   background-repeat: no-repeat;
   background-size: 867px 637px;
@@ -195,16 +204,20 @@ font-style: 600;
 }
 
 .feynman__title{
+  margin: 0;
+padding: 0;
   width: 648px;
   text-align: center;
   margin: 0 auto;
   line-height: 1.15;
   font-size: 120px;
   font-style: 600;
-  margin-top: 100px;
+  padding-top:100px;
 }
 
 .feynman__subtitle{
+  margin: 0;
+padding: 0;
   text-align: center;
   min-width: 348px;
   margin: 0 auto;
@@ -233,7 +246,8 @@ font-style: 600;
   flex-direction: column;
   align-items: center;
   padding-top: 90px;
-  z-index: -1;
+  padding-bottom: 90px;
+  z-index: 1;
   overflow: hidden;
 }
 
@@ -242,6 +256,10 @@ position: absolute;
 z-index: -1;
 right: -210px;
 top: 0;
+width: 877px;
+height: 877px;
+background-image: url(../images/kaufman-triangle.svg);
+
 }
 
 .section-title_theme_dark{
@@ -264,7 +282,6 @@ top: 0;
   color: white;
   margin-right: 0;
   margin-top: 80px;
-  margin-bottom: 100px;
 }
 
 
@@ -281,9 +298,8 @@ top: 0;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  position: absolute;
-  top: 60px;
-  bottom: 40px;
+  margin-top: 60px;
+  margin-bottom: 40px;
 }
 
 .footer__column_content_copyright{
@@ -299,10 +315,13 @@ height: 32px;
 }
 
 .footer__author{
+  margin: 0;
+padding: 0;
   color: white;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+  margin:18px 0;
 }
 
 .footer__column_content_info{
@@ -312,15 +331,22 @@ height: 32px;
 }
 
 .footer__column-heading{
+  margin: 0;
+padding: 0;
   margin-top:0;
-  margin-bottom: 20px;
   color: white;
+  line-height: 30px;
+  font-weight: 600;
+  font-size: 18px;
+
 }
 
 .footer__column-links {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+  margin-top: 20px;
+    margin-bottom: 16px;
 }
 
 .footer__column-link{
