--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+.ul, .li, .p, .h1, .h2, .h3{
+  margin: 0;
+  padding: 0;
+}
+
+.li{
+  list-style-type: none;
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -28,15 +37,13 @@
 }
 
 .header__title{
-  margin: 0;
-padding: 0;
-line-height: 96px;
-font-size: 102px;
-font-weight:600;
-width: 730px;
-margin-left: 64px;
-align-self: center;
-z-index: 2;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight:600;
+  width: 730px;
+  margin-left: 64px;
+  align-self: center;
+  z-index: 2;
 }
 
 .header__link{
@@ -46,8 +53,6 @@ z-index: 2;
 }
 
 .header__subtitle{
-  margin: 0;
-padding: 0;
   position: absolute;
   width: 388px;
   bottom:30px;
@@ -81,15 +86,13 @@ padding: 0;
 }
 
 .two-columns{
-display: flex;
-width: 80%;
-margin: 0 auto;
-justify-content: space-between;
+  display: flex;
+  width: 80%;
+  margin: 0 auto;
+  justify-content: space-between;
 }
 
 .two-columns__brief{
-  margin: 0;
-padding: 0;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
@@ -100,14 +103,12 @@ padding: 0;
 
 .two-columns__main-text{
   flex-direction: column;
-  min-width: 80%;
+  width: 80%;
   height: auto;
   min-width: 784px;
 }
 
 .two-columns__paragraph{
-  margin: 0;
-  padding: 0;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -131,20 +132,16 @@ padding: 0;
 }
 
 .section-title{
-  margin: 0;
-  padding: 0;
-width: 60%;
-margin: 0 auto;
-text-align: center;
-margin-top:100px;
-line-height: 1.15;
-font-size: 60px;
-font-style: 600;
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+  margin-top:100px;
+  line-height: 1.15;
+  font-size: 60px;
+  font-style: 600;
 }
 
 .section-subtitle{
-  margin: 0;
-  padding: 0;
   width: 60%;
   margin: 0 auto;
   text-align: center;
@@ -156,8 +153,6 @@ font-style: 600;
 }
 
 .table{
-  margin: 0;
-  padding: 0;
   display: flex;
   flex-wrap: wrap;
   width: 1100px;
@@ -166,25 +161,18 @@ font-style: 600;
 }
 
 .table__cell{
-  margin: 0;
-  padding: 0;
   width: 250px;
   margin-top: 60px;
   display: flex;
   flex-direction: column;
-  list-style-type: none;
 }
 .table__heading{
-  margin: 0;
-  padding: 0;
   line-height: 1.15;
   font-size: 24px;
   font-style: 600;
 }
 
 .table__text{
-  margin: 0;
-padding: 0;
   line-height: 1.2;
   font-size: 18px;
   font-style: normal;
@@ -204,8 +192,6 @@ padding: 0;
 }
 
 .feynman__title{
-  margin: 0;
-padding: 0;
   width: 648px;
   text-align: center;
   margin: 0 auto;
@@ -216,8 +202,6 @@ padding: 0;
 }
 
 .feynman__subtitle{
-  margin: 0;
-padding: 0;
   text-align: center;
   min-width: 348px;
   margin: 0 auto;
@@ -252,13 +236,13 @@ padding: 0;
 }
 
 .kaufman__triangle{
-position: absolute;
-z-index: -1;
-right: -210px;
-top: 0;
-width: 877px;
-height: 877px;
-background-image: url(../images/kaufman-triangle.svg);
+  position: absolute;
+  z-index: -1;
+  right: -210px;
+  top: 0;
+  width: 877px;
+  height: 877px;
+  background-image: url(../images/kaufman-triangle.svg);
 
 }
 
@@ -310,13 +294,11 @@ background-image: url(../images/kaufman-triangle.svg);
 }
 
 .logo_place_footer{
-width: 228px;
-height: 32px;
+  width: 228px;
+  height: 32px;
 }
 
 .footer__author{
-  margin: 0;
-padding: 0;
   color: white;
   line-height: 25px;
   font-size: 18px;
@@ -331,8 +313,6 @@ padding: 0;
 }
 
 .footer__column-heading{
-  margin: 0;
-padding: 0;
   margin-top:0;
   color: white;
   line-height: 30px;
@@ -346,7 +326,7 @@ padding: 0;
   justify-content: space-between;
   flex-direction: column;
   margin-top: 20px;
-    margin-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 .footer__column-link{
