--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,3 @@
-.ul, .li, .p, .h1, .h2, .h3{
-  margin: 0;
-  padding: 0;
-}
-
-.li{
-  list-style-type: none;
-}
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -37,6 +28,7 @@
 }
 
 .header__title{
+  margin: 0;
   line-height: 96px;
   font-size: 102px;
   font-weight:600;
@@ -53,6 +45,7 @@
 }
 
 .header__subtitle{
+  margin: 0;
   position: absolute;
   width: 388px;
   bottom:30px;
@@ -70,6 +63,7 @@
   bottom: 0;
   right: 0;
   z-index: 1;
+  object-fit: cover;
 }
 
 .header__square-pic {
@@ -84,14 +78,13 @@
 .two-columns{
   display: flex;
   width: 80%;
-  min-width: 784px;
   margin: 0 auto;
   margin-top: 100px;
-  margin-bottom: 100px;
   justify-content: space-between;
 }
 
 .two-columns__brief{
+  margin-bottom: 0;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
@@ -103,10 +96,12 @@
 .two-columns__main-text{
   flex-direction: column;
   width: 80%;
+  min-width: 784px;
   height: auto;
 }
 
 .two-columns__paragraph{
+  margin: 0;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -130,6 +125,8 @@
 }
 
 .section-title{
+  margin: 0;
+  padding: 0;
   width: 60%;
   margin: 0 auto;
   text-align: center;
@@ -140,6 +137,8 @@
 }
 
 .section-subtitle{
+  margin: 0;
+  padding: 0;
   width: 60%;
   margin: 0 auto;
   text-align: center;
@@ -163,14 +162,17 @@
   margin-top: 60px;
   display: flex;
   flex-direction: column;
+  list-style-type: none;
 }
 .table__heading{
+  margin:0;
   line-height: 1.15;
   font-size: 24px;
   font-style: 600;
 }
 
 .table__text{
+  margin-bottom: 0;
   line-height: 1.2;
   font-size: 18px;
   font-style: normal;
@@ -241,7 +243,7 @@
   width: 877px;
   height: 877px;
   background-image: url(../images/kaufman-triangle.svg);
-
+  background-size:100% 100%;
 }
 
 .section-title_theme_dark{
@@ -311,6 +313,7 @@
 }
 
 .footer__column-heading{
+  margin-bottom: 0;
   margin-top:0;
   color: white;
   line-height: 30px;
