--- a/blocks/feynman/__title/feynman__title.css
+++ b/blocks/feynman/__title/feynman__title.css
@@ -1,9 +1,9 @@
 .feynman__title{
-   width: 648px;
+   max-width: 648px;
    text-align: center;
    margin: 0 auto;
    line-height: 1.15;
    font-size: 120px;
-   font-style: 600;
+   font-weight: 600;
    padding-top:100px;
 }
