--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -5,7 +5,6 @@
    top: 0;
    width: 877px;
    height: 877px;
-   background-image: url(../images/kaufman-triangle.svg);
+   background-image: url(/images/kaufman-triangle.svg);
    background-size:100% 100%;
-   animation: rotation 20s linear infinite;
 }
