--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,7 +1,10 @@
 .video__iframe{
    width: 516px;
    height: 316px;
-   margin-top: 50px;
    margin-right: 20px;
    border: none;
+}
+
+.video__iframe:last-child{
+   margin-right: 0px;
 }
